cargo-features = [ "per-package-target" ]

[package]
name = "sfy-imu-usb"
version = "0.1.0"
edition = "2021"
authors = [ "Gaute Hope <gauteh@met.no>" ]
resolver = "2"
forced-target = "thumbv7em-none-eabihf"


[dependencies]
heapless = { version = "0.7", features = [ "serde", "ufmt-impl", "defmt-impl" ] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
embedded-hal = "0.2.6"
cmsis_dsp = { version = "0.1.0", features = [ "micromath" ] }
git-version = "0.3.5"
chrono = { version = "0.4.19", default-features = false }
ufmt = { version = "0.1.0", optional = true }
static_cell = "2.0.0"

[dependencies.ambiq-hal]
version = "0.3"
features = ["ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"

[dev-dependencies]

[features]
default = [ "deploy" ]
deploy = []
