[package]
name = "sfy-imu-usb"
version = "0.1.0"
edition = "2021"
authors = [ "Gaute Hope <gauteh@met.no>" ]
resolver = "2"


[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
heapless = { version = "0.7", features = [ "serde", "ufmt-impl" ] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7"
embedded-hal = "0.2.6"
cmsis_dsp = { version = "0.1.0", features = [ "micromath" ] }
git-version = "0.3.5"
chrono = { version = "0.4.19", default-features = false }
ufmt = { version = "0.1.0" }
static_cell = "2.0.0"
ism330dhcx = "0.5.1"
ufmt_float = "0.1.0"

[dependencies.ambiq-hal]
version = "0.3"
features = ["ambiq-sdk", "sparkfun-redboard-nano", "rt"]
git = "https://github.com/gauteh/ambiq-rs"

[patch.crates-io]
ism330dhcx = { git = "https://github.com/gauteh/ism330dhcx", branch = "gyro-accel-parse-range" }

[dev-dependencies]

[features]
default = [ "deploy" ]
deploy = []
